--- a/Semana-04/Css/sidebar.css
+++ b/Semana-04/Css/sidebar.css
@@ -6,3 +6,53 @@
     height: 100%;
     background-color: #B1B2B6;
 }
+
+.sidebar {
+    float: left;
+    width: 288px;
+    height: 2955px;
+    
+    color:  #373867;
+    padding: 20px 16px;
+    box-sizing: border-box;
+    font-family: 'Roboto';
+    font-style: normal;
+}
+
+.log-in {
+    background: #49A37B;
+    color: #FFFFFF;
+}
+
+.sign-up {
+    background: #373867;
+    color: #FFFFFF;
+}
+
+.menu-sidebar {
+    padding-top: 90px;
+    padding-bottom: 15px;
+    height: 350px;
+}
+
+.menu-border {
+    border-bottom: 2px solid #49A37B;
+}
+
+.get-in-touch-border {
+    border-bottom: 2px solid #49A37B;
+}
+
+button .log-in {
+    background: #49A37B;
+}
+
+button .sign-up {
+    background: #373867;
+}
+
+@media only screen and (min-width: 1024px) {
+    .sidebar {
+        display: inline;
+    }
+}
